--- a/Filmtalk/public/index.html
+++ b/Filmtalk/public/index.html
@@ -4,7 +4,7 @@
     <link href="../src/index.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="../src/movie-with-students-audience-svgrepo-com.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Filmtalk</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
